--- a/templates/01Connection/check_connection.html
+++ b/templates/01Connection/check_connection.html
@@ -6,8 +6,7 @@
 <table class="table">
 <tr>
 <td>
-
-    <select name="manager_db" class="form-control" onchange="update_form(this.value)">              
+    <select name="dbname" class="form-control">              
         <option selected disabled>Selecione una base de datos</option>
         {% for db in object_list %}
         <option value="{{ db }}">{{ db }}</option>
