--- a/templates/01Connection/connection_update.html
+++ b/templates/01Connection/connection_update.html
@@ -5,12 +5,12 @@
 {% block content %}
 <div class="box box-info">
     <div class="box-header with-border">
-        <h3 class="box-title">Nueva conexion</h3>
+        <h3 class="box-title">Nueva connection</h3>
     </div>
     <div class="box-body">
             <div id"div_form">
                 <form method="post" id="form_connection">
-                    {% csrf_token %}                 
+                    {% csrf_token %}                  
                     <table class="table">
                         <tr>
                             <td>
@@ -65,38 +65,22 @@
                         </tr>
                         <tr>
                             <td>
-                                <select name="dbname" class="form-control" id="id_dbname" required>              
-                                    <option value="" selected disabled>Selecione una base de datos</option>
-                                </select>
+                                <span class="input-group-addon label-info form-control" id="sizing-addon1">Base de datos</span>
                             </td>
                             <td>
-                                <div id="button_list">
-                                    <input type="hidden" id="url" value="{% url 'list-db' %}">                          
-                                    <button id="list_db" class="btn btn-warning">
-                                        <span class="glyphicon glyphicon-check" aria-hidden="true"></span> Listar bases de datos
-                                    </button> 
-                                </div>
-                                <div id="button_edit" hidden>
-                                    <button class="btn btn-info" onclick="enable_input_connection()" hidden>
-                                        <span class="glyphicon glyphicon-check" aria-hidden="true"></span> Editar
-                                    </button>
-                                    <button type="submit" class="btn btn-success" hidden>
-                                        <span class="glyphicon glyphicon-floppy-saved" aria-hidden="true"></span> Guardar
-                                    </button>
-                                </div>                               
-                            </td>                                                                                                                                                    
-                        </tr>                                      
-                    </table>                                                                        
+                                {{ form.dbname }}
+                            </td>
+                        </tr> 
+                        <tr>
+                            <td>
+                                <button type="submit" class="btn btn-success">
+                                    <span class="glyphicon glyphicon-floppy-saved" aria-hidden="true"></span> Guardar
+                                </button>
+                            </td>
+                        </tr>                                     
+                    </table> 
+                    <div id="dblist"></div>                                  
                 </form>
-                <div id="alert_success" class="alert alert-success" hidden>
-                    <button type="button" class="close" data-dismiss="alert">x</button>
-                    <strong>La conexion es correcta! </strong>
-                </div>
-                <div id="alert_error" class="alert alert-danger" hidden>
-                    <button type="button" class="close" data-dismiss="alert">x</button>
-                    <strong>ERROR! </strong>
-                    No se ha establecido la conexion.
-                </div>
             </div>
     </div>
 </div>
