--- a/templates/01Connection/connection_form.html
+++ b/templates/01Connection/connection_form.html
@@ -76,14 +76,14 @@
                                         <span class="glyphicon glyphicon-check" aria-hidden="true"></span> Listar bases de datos
                                     </button> 
                                 </div>
-                                <div id="button_edit" hidden>
-                                    <button class="btn btn-info" onclick="enable_input_connection()" hidden>
+
+                                    <button class="btn btn-info" onclick="enable_input_connection()">
                                         <span class="glyphicon glyphicon-check" aria-hidden="true"></span> Editar
                                     </button>
-                                    <button type="submit" class="btn btn-success" hidden>
+                                    <button type="submit" class="btn btn-success">
                                         <span class="glyphicon glyphicon-floppy-saved" aria-hidden="true"></span> Guardar
                                     </button>
-                                </div>                               
+                                                             
                             </td>                                                                                                                                                    
                         </tr>                                      
                     </table>                                                                        
