Modo 1 formulario de conexion

--- a/templates/01Connection/connection_update.html
+++ b/templates/01Connection/connection_update.html
@@ -10,10 +10,10 @@
     <div class="box-body">
             <div id"div_form">
                 <form method="post" id="form_connection">
-                    {% csrf_token %}                  
+                    {% csrf_token %}            
                     <table class="table">
                         <tr>
-                            <td>
+                            <td width="25%">
                                 <span class="input-group-addon label-info form-control">Nombre de la conexion</span>
                             </td>
                             <td>
