--- a/templates/01Connection/connection_form.html
+++ b/templates/01Connection/connection_form.html
@@ -10,10 +10,10 @@
     <div class="box-body">
             <div id"div_form">
                 <form method="post" id="form_connection">
-                    {% csrf_token %}                 
+                    {% csrf_token %}         
                     <table class="table">
                         <tr>
-                            <td>
+                            <td width="25%">
                                 <span class="input-group-addon label-info form-control">Nombre de la conexion</span>
                             </td>
                             <td>
@@ -72,22 +72,27 @@
                             <td>
                                 <div id="button_list">
                                     <input type="hidden" id="url" value="{% url 'list-db' %}">                          
-                                    <button id="list_db" class="btn btn-warning">
+                                    <button id="list_db" class="btn btn-warning">                                     
                                         <span class="glyphicon glyphicon-check" aria-hidden="true"></span> Listar bases de datos
-                                    </button> 
+                                    </button>                                   
                                 </div>
-
+                                <div id="button_edit" hidden>
                                     <button class="btn btn-info" onclick="enable_input_connection()">
                                         <span class="glyphicon glyphicon-check" aria-hidden="true"></span> Editar
                                     </button>
                                     <button type="submit" class="btn btn-success">
                                         <span class="glyphicon glyphicon-floppy-saved" aria-hidden="true"></span> Guardar
-                                    </button>
-                                                             
+                                    </button>  
+                                </div>                                                          
                             </td>                                                                                                                                                    
                         </tr>                                      
                     </table>                                                                        
                 </form>
+                <div id="loader" hidden>
+                    <center>
+                        <img src="{% static "images/loader.gif" %}" width="40px" height="40px" >
+                    </center>  
+                </div>             
                 <div id="alert_success" class="alert alert-success" hidden>
                     <button type="button" class="close" data-dismiss="alert">x</button>
                     <strong>La conexion es correcta! </strong>
