--- a/templates/01Connection/connection_form.html
+++ b/templates/01Connection/connection_form.html
@@ -1,110 +1,117 @@
-{% extends '01Connection/base.html' %}
-
-{% load static %}
-
-{% block content %}
+{% extends '01Connection/base.html' %} {% load static %} {% block content %}
 <div class="box box-info">
     <div class="box-header with-border">
         <h3 class="box-title">Nueva conexion</h3>
     </div>
     <div class="box-body">
-            <div id"div_form">
+        <div id "div_form">
+            <table class="table">
                 <form method="post" id="form_connection">
-                    {% csrf_token %}         
-                    <table class="table">
-                        <tr>
-                            <td width="25%">
-                                <span class="input-group-addon label-info form-control">Nombre de la conexion</span>
-                            </td>
-                            <td>
-                                {{ form.connection_name }}
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <span class="input-group-addon label-info form-control">Gestor de base datos</span>
-                            </td>
-                            <td>
-                                {{ form.manager_db }}
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <span class="input-group-addon label-info form-control">Puerto</span>
-                            </td>
-                            <td>
-                                {{ form.port }}
-                            </td>           
-                        </tr>
+                    {% csrf_token %}
 
-                        <tr>
-                            <td>
-                                <span class="input-group-addon label-info form-control" id="sizing-addon1">IP Servidor</span>
-                            </td>
-                            <td>
-                                {{ form.host }}
-                            </td>
-                        </tr>
+                    <tr>
+                        <td width="25%">
+                            <span class="input-group-addon label-info form-control">Nombre de la conexion</span>
+                        </td>
+                        <td>
+                            {{ form.connection_name }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="input-group-addon label-info form-control">Gestor de base datos</span>
+                        </td>
+                        <td>
+                            {{ form.manager_db }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="input-group-addon label-info form-control">Puerto</span>
+                        </td>
+                        <td>
+                            {{ form.port }}
+                        </td>
+                    </tr>
 
-                        <tr>
-                            <td>
-                                <span class="input-group-addon label-info form-control" id="sizing-addon1">Usuario</span>
-                            </td>
-                            <td>
-                                {{ form.user }}
-                            </td>
-                        </tr>
+                    <tr>
+                        <td>
+                            <span class="input-group-addon label-info form-control" id="sizing-addon1">IP Servidor</span>
+                        </td>
+                        <td>
+                            {{ form.host }}
+                        </td>
+                    </tr>
 
-                        <tr>
-                            <td>
-                                <span class="input-group-addon label-info form-control" id="sizing-addon1">Contraseña</span>
-                            </td>
-                            <td>
-                                {{ form.passwd }}
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <select name="dbname" class="form-control" id="id_dbname" required>              
-                                    <option value="" selected disabled>Selecione una base de datos</option>
-                                </select>
-                            </td>
-                            <td>
-                                <div id="button_list">
-                                    <input type="hidden" id="url" value="{% url 'list-db' %}">                          
-                                    <button id="list_db" class="btn btn-warning">                                     
-                                        <span class="glyphicon glyphicon-check" aria-hidden="true"></span> Listar bases de datos
-                                    </button>                                   
-                                </div>
-                                <div id="button_edit" hidden>
-                                    <button class="btn btn-info" onclick="enable_input_connection()">
-                                        <span class="glyphicon glyphicon-check" aria-hidden="true"></span> Editar
-                                    </button>
-                                    <button type="submit" class="btn btn-success">
-                                        <span class="glyphicon glyphicon-floppy-saved" aria-hidden="true"></span> Guardar
-                                    </button>  
-                                </div>                                                          
-                            </td>                                                                                                                                                    
-                        </tr>                                      
-                    </table>                                                                        
+                    <tr>
+                        <td>
+                            <span class="input-group-addon label-info form-control" id="sizing-addon1">Usuario</span>
+                        </td>
+                        <td>
+                            {{ form.user }}
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <span class="input-group-addon label-info form-control" id="sizing-addon1">Contraseña</span>
+                        </td>
+                        <td>
+                            {{ form.passwd }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            {% if form.dbname.value %}
+                            <select name="dbname" class="form-control" id="id_dbname" required>
+                                <option value="{{ form.dbname.value }}" selected>{{ form.dbname.value }}</option>
+                            </select>
+                            {% else %}
+                            <select name="dbname" class="form-control" id="id_dbname" required>
+                                <option value="" selected disabled>Selecione una base de datos</option>
+                            </select>
+                            {% endif %}
+                        </td>
+                        <td>
+                            <button type="submit" class="btn btn-success">
+                                <span class="glyphicon glyphicon-floppy-saved" aria-hidden="true"></span> Guardar
+                            </button>
+                        </td>
+                    </tr>
                 </form>
-                <div id="loader" hidden>
-                    <center>
-                        <img src="{% static "images/loader.gif" %}" width="40px" height="40px" >
-                    </center>  
-                </div>             
-                <div id="alert_success" class="alert alert-success" hidden>
-                    <button type="button" class="close" data-dismiss="alert">x</button>
-                    <strong>La conexion es correcta! </strong>
-                </div>
-                <div id="alert_error" class="alert alert-danger" hidden>
-                    <button type="button" class="close" data-dismiss="alert">x</button>
-                    <strong>ERROR! </strong>
-                    No se ha establecido la conexion.
-                </div>
+                <tr>
+                    <td>
+                        <div id="button_list">
+                            <input type="hidden" id="url" value="{% url 'list-db' %}">
+                            <button id="list_db" class="btn btn-warning">
+                                <span class="glyphicon glyphicon-check" aria-hidden="true"></span> Listar bases de datos
+                            </button>
+                        </div>
+                        <div id="button_edit" hidden>
+                            <button class="btn btn-info" id="enable_edit">
+                                <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Editar
+                            </button>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+            <div id="loader" hidden>
+                <center>
+                    <img src="{% static 'images/loader.gif' %}" width="40px" height="40px">
+                </center>
             </div>
+            <div id="alert_success" class="alert alert-success" hidden>
+                <button type="button" class="close" data-dismiss="alert">x</button>
+                <strong>La conexion es correcta! </strong>
+            </div>
+            <div id="alert_error" class="alert alert-danger" hidden>
+                <button type="button" class="close" data-dismiss="alert">x</button>
+                <strong>ERROR! </strong>
+                No se ha establecido la conexion.
+            </div>
+        </div>
     </div>
 </div>
-<script src="{% static "js/jquery-3.1.1.js" %}"></script>
-<script src="{% static "js/codigo.js" %}"></script>
-{% endblock %}
+<script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+<script src="{% static 'js/jquery.validate.min.js' %}"></script>
+<script src="{% static 'js/codigo.js' %}"></script> {% endblock %}
