Servicio de conexiones-Pendiente corregir Oracle

--- a/templates/01Connection/base.html
+++ b/templates/01Connection/base.html
@@ -24,15 +24,7 @@
           <ul class="dropdown-menu">
             <li><a href="{% url 'create-connection' %}">Agregar</a></li>
             <li><a href="{% url 'list-connections' %}">Listar</a></li>
-          </ul>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pruebas de conexion <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="{% url 'create-connection' %}">Agregar</a></li>
-            <li><a href="{% url 'list-connections' %}">Listar</a></li>
+            <li><a href="#">Pruebas</a></li>
           </ul>
         </li>
       </ul>
