--- a/templates/01Connection/connection_form.html
+++ b/templates/01Connection/connection_form.html
@@ -1,4 +1,4 @@
-{% extends '01Connection/base.html' %} {% load static %} {% block content %}
+{% extends '01Connection/base.html' %} {% load static %} {% block content %} {% load material_form %}
 <div class="box box-info">
     <div class="box-header with-border">
         <h3 class="box-title">Nueva conexion</h3>
@@ -6,9 +6,14 @@
     <div class="box-body">
         <div id "div_form">
             <table class="table">
+                {% if form.connection_name.errors %}
+                <div id="alert_error_connection_name" class="alert alert-warning">
+                    <button type="button" class="close" data-dismiss="alert">x</button>
+                    <strong>{{ form.connection_name.errors }}</strong>
+                </div>
+                {% endif %}
                 <form method="post" id="form_connection">
                     {% csrf_token %}
-
                     <tr>
                         <td width="25%">
                             <span class="input-group-addon label-info form-control">Nombre de la conexion</span>
@@ -79,11 +84,8 @@
                                     <span class="glyphicon glyphicon-check" aria-hidden="true"></span> Listar bases de datos
                                 </button>
                             </div>
-                            <div id="button_edit" hidden>
-                                <button type="button" class="btn btn-info" id="enable_edit">
-                                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Editar
-                                </button>
-                                <button type="submit" class="btn btn-success" id="enable_edit">
+                            <div id="button_save" hidden>
+                                <button type="submit" class="btn btn-success">
                                     <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Guardar
                                 </button>
                             </div>
