--- a/templates/adminlte/base.html
+++ b/templates/adminlte/base.html
@@ -13,9 +13,13 @@
 
     {% block stylesheets %}
         {% include 'adminlte/lib/_styles.html' %}
+        <!--{% include 'material/includes/material_css.html' %}
+        {% include 'material/includes/material_js.html' %}-->
     {% endblock %}
 
-    {% block extra_head %}{% endblock %}
+    {% block extra_head %}
+        <script src="{% static 'js/jquery-3.1.1.js' %}"></script>
+    {% endblock %}
 </head>
 <body class="hold-transition skin-blue sidebar-mini {% block body_class %}{% block bodyclass %}{% endblock %}{% endblock %}">
 
