--- a/templates/01Connection/base.html
+++ b/templates/01Connection/base.html
@@ -24,7 +24,7 @@
           <ul class="dropdown-menu">
             <li><a href="{% url 'create-connection' %}">Agregar</a></li>
             <li><a href="{% url 'list-connections' %}">Listar</a></li>
-            <li><a href="#">Pruebas</a></li>
+            <li><a href="{% url 'test-connection' %}">Pruebas</a></li>
           </ul>
         </li>
       </ul>
