--- a/templates/01Connection/connection_form.html
+++ b/templates/01Connection/connection_form.html
@@ -1,4 +1,4 @@
-{% extends '01Connection/base.html' %} {% load static %} {% block content %} {% load material_form %}
+{% extends '01Connection/base.html' %} {% load static %} {% block content %}
 <div class="box box-info">
     <div class="box-header with-border">
         <h3 class="box-title">Nueva conexion</h3>
