--- a/templates/Services/base.html
+++ b/templates/Services/base.html
@@ -19,8 +19,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{% url 'create-service' %}">Agregar</a></li>
-        <li><a href="{% url 'list-service' %}">Lista</a></li>
+        <li><a href="{% url 'service-create' %}">Agregar</a></li>
+        <li><a href="{% url 'service-list' %}">Lista</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
