--- a/templates/Services/query_configure.html
+++ b/templates/Services/query_configure.html
@@ -1,9 +1,10 @@
-{% extends '02Service/base.html' %} {% load static %} {% block content %}
+{% extends 'Services/base.html' %} {% load static %} {% block content %}
 <div class="box box-info">
     <div class="box-header with-border">
         <h3 class="box-title">Nuevo servicio</h3>
     </div>
     <div class="box-body">
+        asdfads {{ form.o }}
         <form method="post" id="form_service">
             <table class="table">
                 {% csrf_token %}
@@ -87,19 +88,19 @@
                                 </tr>
                             </table>
                         </div>
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th>
-                                            Campos de consulta
-                                        </th>
-                                        <th>
-                                            Nombre representacional
-                                        </th>
-                                    </tr>
-                                </thead>
-                                <tbody id="fields_type"></tbody>
-                            </table>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        Campos de consulta
+                                    </th>
+                                    <th>
+                                        Nombre representacional
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody id="fields_type"></tbody>
+                        </table>
                     </div>
                 </div>
             </div>
