--- a/templates/Services/service_form.html
+++ b/templates/Services/service_form.html
@@ -38,7 +38,7 @@
                             <span class="input-group-addon label-info form-control">Permisos</span>
                         </td>
                         <td>
-                            {{ form.permits }}
+                            {{ form.roles }}
                         </td>
                     </tr>
 
