Actualizacion de modelos, creacion de modelo iconos y modelo permisos, implementacion en graphql, ajustes varios

--- a/templates/Services/service_form.html
+++ b/templates/Services/service_form.html
@@ -27,6 +27,14 @@
                     </tr>
                     <tr>
                         <td>
+                            <span class="input-group-addon label-info form-control">Icono</span>
+                        </td>
+                        <td>
+                            {{ form.icon }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
                             <span class="input-group-addon label-info form-control">Tipo de servicio</span>
                         </td>
                         <td>
@@ -38,7 +46,7 @@
                             <span class="input-group-addon label-info form-control">Permisos</span>
                         </td>
                         <td>
-                            {{ form.roles }}
+                            {{ form.permits }}
                         </td>
                     </tr>
 
@@ -48,6 +56,14 @@
                         </td>
                         <td>
                             {{ form.state }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="input-group-addon label-info form-control">Descripción</span>
+                        </td>
+                        <td>
+                            {{ form.description }}
                         </td>
                     </tr>
 
