--- a/templates/Services/item_configure.html
+++ b/templates/Services/item_configure.html
@@ -5,10 +5,10 @@
     </a> 
 
     <div class="box-header with-border">
-        <h3 class="box-title">Lista de objetos perdidos</h3><br>
+        <h3 class="box-title">{{ service.title }}</h3><br>
     </div>
     
-    <a type="button" class="btn btn-primary" href="{% url 'item-create' service_id %}"> <!---->
+    <a type="button" class="btn btn-primary" href="{% url 'item-create' service.id %}"> <!---->
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Agregar
     </a> 
     
@@ -25,7 +25,7 @@
             {% if object_list %} {% for item in object_list %}
             <tr>
                 <td>
-                    {{ item.name }}
+                    {{ item.title }}
                 </td>
                 <td>
                     {{ item.description }}
@@ -34,16 +34,16 @@
                     {{ item.photo }}
                 </td>
                 <td>
-                    <a type="button" class="btn btn-primary" href="{% url 'item-edit' service_id item.id %}"> <!---->
+                    <a type="button" class="btn btn-primary" href="{% url 'item-edit' service.id item.id %}"> <!---->
                         <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Editar
                     </a> 
-                    <a type="button" class="btn btn-danger" href="{% url 'item-delete' service_id item.id %}"> 
+                    <a type="button" class="btn btn-danger" href="{% url 'item-delete' service.id item.id %}"> 
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Eliminar
                     </a>
                 </td>
             </tr>
             {% endfor %} {% else %}
-            <h1>No hay objetos registrados</h1>
+            <h1>Este catalogo esta vacio.</h1>
             {% endif %}
         </tbody>
     </table>
