--- a/templates/Services/office_form.html
+++ b/templates/Services/office_form.html
@@ -9,10 +9,10 @@
     <div class="box-body">
         <div id "div_form">
             <table class="table">
-                {% if form.name.errors %}
-                <div id="alert_error_name" class="alert alert-warning">
+                {% if form.title.errors %}
+                <div id="alert_error_title" class="alert alert-warning">
                     <button type="button" class="close" data-dismiss="alert">x</button>
-                    <strong>{{ form.name.errors }}</strong>
+                    <strong>{{ form.title.errors }}</strong>
                 </div>
                 {% endif %}
                 <form method="post" class="post-form">
